--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-phone-number-input": "^3.4.14",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
